--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div>
                 <p id="conteudoIng"></p>
             </div>
-        </div>
+        
+        <p style="color:purple" id="contando"></p></div>
+      <!--  <input type="text" id="escolha" onblur="numeroDigitado()"> -->
 
 
     </div>
